--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monsters-rolodex",
+  "name": "react-pokedex",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://levistrange.github.io/react-pokedex",
@@ -14,8 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": "react-app"
